shelter/pages/main/style.css
/* ... */
.header__logo {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 10px; }
  @media screen and (max-width: 767px) {
    .header__logo {
      z-index: 100; } }

.header__logo-name {
  font-weight: 400;
  font-size: 32px;
  line-height: 110%;
  letter-spacing: 0.06em; }
  .header__logo-name > a {
    color: #f1cdb3; }

.header__logo-subname {
  font-size: 13px;
  line-height: 15px;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  color: #ffffff;
  letter-spacing: 0.1em;
  font-weight: lighter; }

.header__nav {
  transition: all 0.5s ease-out; }
  @media screen and (max-width: 767px) {
    .header__nav {
      z-index: 99;
      position: absolute;
      top: 0;
      bottom: 0;
      overflow-y: hidden;
      width: 320px;
      background: #292929;
      right: -320px;
      height: 100vh;
      transition: all 0.5s ease-in; } }

.header__burger {
  display: none; }
  @media screen and (max-width: 767px) {
    .header__burger {
      display: block;
      position: relative;
      z-index: 300;
      transition: all 0.5s ease-in; } }
  .header__burger.activeBurger {
    transform: rotate(-90deg);
    transition: all 0.5s ease-out; }

.header__links {
  list-style: none;
  display: flex; }
  @media screen and (max-width: 767px) {
    .header__links {
      flex-direction: column;
      position: relative;
      top: 50%;
      row-gap: 40px;
      justify-content: center;
      align-items: center;
      transform: translateY(-50%); } }

.header__link {
  font-size: 15px;
  line-height: 160%;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  margin-left: 35px;
  font-weight: lighter; }
  @media screen and (max-width: 767px) {
    .header__link {
      font-size: 32px;
      line-height: 160%;
      color: #fafafa;
      margin-left: 0; }
      .header__link > a {
        font-weight: lighter; } }

.nav__link:hover {
  color: #fafafa; }

.nav__link.active {
  padding-bottom: 3px;
  border-bottom: 3px solid #f1cdb3;
  color: #FAFAFA; }

.main-screen {
  padding-top: 180px;
  background: #5b483a;
  background: linear-gradient(120deg, #5b483a 0%, #262425 60%); }
  @media screen and (max-width: 768px) {
    .main-screen {
      padding-top: 90px; } }

.main__wrapper {
  width: 100%;
  height: calc(908px- 180px);
  display: flex;
  justify-content: space-between; }
  @media screen and (max-width: 1279px) {
    .main__wrapper {
      flex-direction: column;
      align-items: center;
      height: calc(1165px - 90px);
      justify-content: space-between; } }
  @media screen and (max-width: 630px) {
    .main__wrapper {
      flex-direction: column;
      align-items: center;
      height: calc(823px - 90px);
      justify-content: space-between; } }

.main__info {
  display: flex;
  margin-top: calc(163px);
  flex-direction: column;
  justify-content: space-between;
  max-width: 460px;
  height: 322px;
  margin-top: 163px; }
  @media (max-width: 1279px) {
    .main__info {
      margin-top: 60px;
      row-gap: 42px; } }
  @media screen and (max-width: 370px) {
    .main__info {
      align-items: center;
      max-height: 296px; } }

.main__title {
  color: #ffffff;
  line-height: 130%;
  font-size: 44px;
  max-width: 310px;
  font-weight: 400; }
  @media screen and (max-width: 370px) {
    .main__title {
      font-size: 25px;
      text-align: center;
      max-width: 260px;
      letter-spacing: 0.06em; } }

.main__subtitle {
  font-size: 15px;
  line-height: 160%;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  color: #cdcdcd; }
  @media screen and (max-width: 320px) {
    .main__subtitle {
      text-align: center; } }

.main__button {
  position: relative;
  z-index: 70;
  font-size: 17px;
  line-height: 130%;
  letter-spacing: 0.06em;
  color: #292929;
  background-color: #f1cdb3; }
  .main__button:hover {
    background-color: #fddcc4; }
  @media screen and (max-width: 1279px) {
    .main__button {
      align-self: center; } }

.main__image {
  background: url("../../assets/images/start-screen-puppy.png") no-repeat bottom/contain;
  max-width: 698px;
  width: 100%;
  height: calc(908px - 180px); }
  @media screen and (max-width: 1279px) {
    .main__image {
      height: 593px;
      background-position: right; } }
  @media screen and (max-width: 630px) {
    .main__image {
      height: 271px; } }

@media screen and (max-width: 430px) {
  .about {
    max-height: 974px; } }
.about__wrapper {
  display: grid;
  grid-template-columns: 300px 430px;
  grid-template-rows: 1fr;
  padding: 80px 0 100px 0;
  -moz-column-gap: 120px;
  column-gap: 120px;
  align-items: center; }
  @media screen and (max-width: 1279px) {
    .about__wrapper {
      grid-template-columns: 1fr;
      grid-template-rows: 1fr 1fr;
      row-gap: 80px;
      height: 1048px;
      justify-items: center; } }
  @media screen and (max-width: 430px) {
    .about__wrapper {
      padding: 42px 15px 42px 15px;
      align-items: flex-start; } }
.about__image {
  background: url("../../assets/images/about-pets.png") no-repeat bottom/contain;
  height: calc(588px - 80px - 100px);
  order: 0; }
  @media screen and (max-width: 1279px) {
    .about__image {
      order: 1;
      max-width: 300px;
      width: 100%;
      height: 408px; } }
  @media screen and (max-width: 430px) {
    .about__image {
      height: 353px;
      margin-top: 14px; } }
.about__info {
  display: flex;
  flex-direction: column;
  row-gap: 25px;
  order: 1; }
  @media screen and (max-width: 1279px) {
    .about__info {
      order: 0;
      max-width: 430px;
      width: 100%;
      height: 380px;
      justify-content: flex-start; } }
  @media screen and (max-width: 430px) {
    .about__info {
      row-gap: 0px; } }
.about__title {
  font-family: "Georgia";
  font-size: 35px;
  letter-spacing: 0.06em;
  line-height: 130%;
  color: #545454;
  max-width: 370px;
  width: 100%; }
/* ... */

